[gd_scene load_steps=9 format=3 uid="uid://ckv4mh3qx236v"]

[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_20hsg"]
[ext_resource type="Script" uid="uid://c234700a4utit" path="res://objects/ui/choice_panel_weight/choice_panel_weight.gd" id="2_0jnjm"]
[ext_resource type="Texture2D" uid="uid://bflf4t076bi84" path="res://sprites/ui/spinwheel/spinwheel_back.png" id="4_npp0o"]
[ext_resource type="Texture2D" uid="uid://bw1bh7nrw8mfl" path="res://sprites/ui/spinwheel/spinwheel_white_circle.png" id="5_l1uyb"]
[ext_resource type="Texture2D" uid="uid://d2pjho51i0wsg" path="res://sprites/ui/spinwheel/spinwheel_nail.png" id="6_7y4kg"]
[ext_resource type="Texture2D" uid="uid://4wwixrigdus3" path="res://sprites/ui/spinwheel/spinwheel_cursor.png" id="7_ncamr"]
[ext_resource type="PackedScene" uid="uid://rligncl36ry1" path="res://objects/ui/choice_panel_weight/miscellaneous/icon_collage.tscn" id="8_7y4kg"]
[ext_resource type="Texture2D" uid="uid://cigsdewro07vk" path="res://icon.svg" id="8_fbqpx"]

[node name="ChoicePanelWeight" type="PanelContainer"]
custom_minimum_size = Vector2(400, 540)
offset_right = 400.0
offset_bottom = 482.0
theme = ExtResource("1_20hsg")
theme_type_variation = &"LightPanel"
script = ExtResource("2_0jnjm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="OptionContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SureOption" type="Control" parent="VBoxContainer/OptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="LotteryBackground" type="TextureRect" parent="VBoxContainer/OptionContainer/SureOption"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("4_npp0o")
expand_mode = 1
stretch_mode = 4

[node name="LotteryBackground2" type="TextureRect" parent="VBoxContainer/OptionContainer/SureOption"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("5_l1uyb")
expand_mode = 1
stretch_mode = 4

[node name="SureIcon" type="TextureRect" parent="VBoxContainer/OptionContainer/SureOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("8_fbqpx")
expand_mode = 1
stretch_mode = 4

[node name="Lottery" type="Control" parent="VBoxContainer/OptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="LotteryBackground" type="TextureRect" parent="VBoxContainer/OptionContainer/Lottery"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
size_flags_horizontal = 4
texture = ExtResource("4_npp0o")
expand_mode = 1
stretch_mode = 4

[node name="LotteryProgress" type="TextureProgressBar" parent="VBoxContainer/OptionContainer/Lottery"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
pivot_offset = Vector2(200, 200)
max_value = 1.0
step = 0.01
value = 0.4
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("5_l1uyb")
texture_progress = ExtResource("5_l1uyb")
tint_under = Color(1, 1, 0.3764706, 1)
tint_progress = Color(0.15294118, 0.29803923, 1, 1)

[node name="LotteryNail" type="TextureRect" parent="VBoxContainer/OptionContainer/Lottery"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
size_flags_horizontal = 4
texture = ExtResource("6_7y4kg")
expand_mode = 1
stretch_mode = 4

[node name="LotteryCursor" type="TextureRect" parent="VBoxContainer/OptionContainer/Lottery"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
pivot_offset = Vector2(195, 80)
size_flags_horizontal = 4
texture = ExtResource("7_ncamr")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="VBoxContainer/OptionContainer/Lottery"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.5
offset_right = 20.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="LotteryIcon" parent="VBoxContainer/OptionContainer/Lottery" instance=ExtResource("8_7y4kg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
offset_right = 181.0
offset_bottom = 194.0

[node name="LotteryResult" type="Label" parent="VBoxContainer/OptionContainer/Lottery"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.5
offset_right = 20.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="LotteryContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="WinContainer" type="VBoxContainer" parent="VBoxContainer/LotteryContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/LotteryContainer"]
layout_mode = 2
text = "or..."

[node name="LossContainer" type="VBoxContainer" parent="VBoxContainer/LotteryContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SureContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "CHOICE_PANEL_SAFE"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
